# ai-exam

./: .gitignore  .vercelignore  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx
src/pages/: ExamPage.css  ExamPage.jsx  ReportPage.css  ReportPage.jsx  UploadPage.css  UploadPage.jsx
vss/api/: index.py
