[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-exam"
version = "1.0.0"
description = "AI-powered exam question generator"
dependencies = [
    "flask",
    "flask-cors",
    "google-generativeai"
]

[tool.vercel]
entrypoint = "vss.api.index:app"
